# clean-architecture-rs

./: .gitignore  README.md
.github/: DOCS.md
.github/workflows/: check.yml  ci.yml  coverage.yml  scheduled.yml  test.yml
auctioning_platform/: Cargo.toml
auctioning_platform/auctions/: Cargo.toml
auctioning_platform/auctions/src/: lib.rs
auctioning_platform/auctions/src/application/: error.rs  mod.rs
auctioning_platform/auctions/src/application/repositories/: auctions.rs  mod.rs
auctioning_platform/auctions/src/application/use_cases/: beginning_auction.rs  ending_auction.rs  mod.rs  placing_bid.rs
auctioning_platform/auctions/src/domain/: error.rs  events.rs  mod.rs  value_objects.rs
auctioning_platform/auctions/src/domain/entities/: auction.rs  bid.rs  mod.rs
auctioning_platform/auctions/src/domain/entities/auction/: tests.rs
auctioning_platform/auctions/tests/: bidding.rs
auctioning_platform/auctions/tests/use_cases/: beginning_auction.rs  bidding.rs  factories.rs  in_memory_repo.rs  main.rs
auctioning_platform/foundation/: Cargo.toml
auctioning_platform/foundation/src/: events.rs  lib.rs
auctioning_platform/foundation/src/value_objects/: currency.rs  factories.rs  mod.rs  money.rs
auctioning_platform/webapp/: Cargo.toml
auctioning_platform/webapp/src/: lib.rs  startup.rs
auctioning_platform/webapp/src/blueprints/: auctions_blueprint.rs  health_blueprint.rs  mod.rs
auctioning_platform/webapp/tests/api/: conftest.rs  health_check.rs  main.rs
