[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", default-features = false, features = ["tokio"] }
reqwest = { version = "0.11.16", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }
